--- a/workflows/query_gene_ctd_tutorial.Rmd
+++ b/workflows/query_gene_ctd_tutorial.Rmd
@@ -56,7 +56,7 @@ readxl::read_excel(path = "../metadata/dataset_metadata.xlsx", sheet = "Data") %
     - It is worth noting that there are key differences in methodology between the AIBS dataset and the two remaining (i.e. Habib and our own in-house snRNA). While both sequence single nuclei, AIBS uses the SMART-Seq v4 kit, which permits sequence of full-length transcripts, while Habib and our in-house data use a 3'-tagging technology i.e. not full-length transcripts sequenced. This may have an impact on gene specificity.
 - Let's go ahead and load in these specificity matrices and query them for SNCA specificity.
 - As we are only interested in SNCA's specificity in overarching cell types, let's limit this search to level 1 cell types.
-```{r, class.source = "fold-show", fig.cap = "Plot of SNCA specificity value across three single-nuclear RNA-seq datasets. exPFC=glutamatergic neurons from the PFC, exCA1/3=pyramidal neurons from the Hip CA region, GABA=GABAergic interneurons, exDG=granule neurons from the Hip dentate gyrus region, ASC=astrocytes, NSC=neuronal stem cells, MG=microglia, ODC=oligodendrocytes, OPC=oligodendrocyte precursor cells, NSC=neuronal stem cells, SMC=smooth muscle cells, END= endothelial cells."}
+```{r, class.source = "fold-show", fig.cap = "**Figure**: Plot of SNCA specificity value across three single-nuclear RNA-seq datasets. exPFC=glutamatergic neurons from the PFC, exCA1/3=pyramidal neurons from the Hip CA region, GABA=GABAergic interneurons, exDG=granule neurons from the Hip dentate gyrus region, ASC=astrocytes, NSC=neuronal stem cells, MG=microglia, ODC=oligodendrocytes, OPC=oligodendrocyte precursor cells, NSC=neuronal stem cells, SMC=smooth muscle cells, END= endothelial cells."}
 
 # Load specificity matrices
 load("../specificity_matrices/AIBS2018_MTG.rda")
